Version 2.0.0 (9 May 2005)

  * packaging changes:
    - fixed conditional linkage of either libsndfile or libaudiofile
      (if none of the two exist, configure script will abort)
    - man pages are now auto generated with the correct libgig version

  * src/gig.cpp, src/gig.h:
    - experimental support for Gigasampler v3 format;
      64 bit file offsets are truncated to 32 bit, 24 bit samples are
      truncated to 16 bit, up to 8 dimensions are read, additional
      articulation informations are ignored at the moment
      (patch by Andreas Persson)
    - added some file format compatibility checks
    - fixed vcf_type_lowpassturbo value (vcf_type_lowpassturbo was actually
      never used, because the necessary check was made before
      initialization)
    - fixed crossfade points order (structure for big endian and little
      endian systems was interchanged)
    - fixed some memory leaks (patch by 'Gene', a.k.a Anders Alm)
    - fixed crash which occured when patches did not have a sample assigned
      to their region or dimension region (patch by Andreas Persson)
    - support for compressed mono samples
    - experimental support for compressed 24 bit samples
    - fixed decompression on big-endian CPUs
    - fixed decompression bug that truncated the last block of samples
    - external decompression buffers can now be used for streaming samples
      to avoid race conditions in case of multiple streaming threads
    - added pre-calculated sample attenuation parameter
    - added v3 "random" and "round robin" dimensions
    - implemented progress indicator callback mechanism for loading
      instruments and samples
    - added functions libraryName() and libraryVersion()

  * src/DLS.cpp, src/DLS.h:
    - fixed File constructor which caused variable File::Instruments always
      to be zero
    - added functions libraryName() and libraryVersion()

  * src/RIFF.cpp, src/RIFF.h: